# django-rest-social

./: README.md  bot.py  bot2.py  config.json  db.sqlite3  pyproject.toml  requirements.txt  test.rest
core/: settings.py
social_network/: middleware.py  models.py  serializers.py  signals.py  urls.py  views.py
social_network/migrations/: 0005_user_last_login_date.py  0006_useractivity_last_login_date.py  0007_remove_user_last_login_date.py
